Updated requirements.txt, finished task list page, reworked verbose names for fields in admin

--- a/project/todo/templates/base.html
+++ b/project/todo/templates/base.html
@@ -10,6 +10,7 @@
     {% bootstrap_css %}
     {% bootstrap_javascript jquery=1 %}
     <link rel="stylesheet" type="text/css" href="{% static 'todo/style.css' %}" />
+    <script src="{% static 'todo/jquery.csrf.js' %}" type="text/javascript"></script>
     <script src="{% static 'todo/script.js' %}" type="text/javascript"></script>
 </head>
 <body>
