--- a/project/todo/templates/nav.html
+++ b/project/todo/templates/nav.html
@@ -1,12 +1,16 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">personal<strong>todos</strong></a>
+            <a class="navbar-brand" href="{% url 'index' %}">personal<strong>todos</strong></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             {% if user.is_authenticated %}
-                <p class="navbar-text pull-center">Did you know... that you've created {{ user.user_profile.added_tasks_count }} todo{{user.user_profile.added_tasks_count|pluralize}} so far?</p>
+                {% if user.user_profile.added_tasks_count == 0 %}
+                    <p class="navbar-text pull-center">Did you know... that you haven't created any todos yet?</p>
+                {% else %}
+                    <p class="navbar-text pull-center">Did you know... that you've created {{ user.user_profile.added_tasks_count }} todo{{user.user_profile.added_tasks_count|pluralize}} so far?</p>
+                {% endif %}
                 <p class="navbar-text pull-right">Signed in as {{ user.username }} - <a href="{% url 'logout' %}">Logout</a></p>
             {% else %}
                 <p class="navbar-text">Log in to create more todos!</p>
