--- a/project/todo/templates/registration/login.html
+++ b/project/todo/templates/registration/login.html
@@ -19,4 +19,10 @@
     </form>
 </div>
 
+<div class="col-lg-4 col-lg-offset-4 col-sm-8 col-sm-offset-2 text-center">
+    <hr/>
+
+    Don't have an account yet? <a href="{% url 'register' %}"><strong>Create new one</strong></a>
+</div>
+
 {% endblock %}
